# maplog

./: .gitignore  CMakeLists.txt  README.md  xmake.lua
cmake/: MapLogConfig.cmake.in
examples/: CMakeLists.txt  basic_usage.cpp  chain_init.cpp  config.json  xmake.lua  zero_config.cpp
include/: logger.h
src/: logger.cpp
